add G1